# PokemonPythonReactGraphQL

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .gitignore  README.md  populate.py  populate_script.py  pyproject.toml  render_build.sh  requirements.txt  sync_populate.py
backend/app/: database.py  graphql_schema.py  main.py  populate_db.py
backend/app/models/: __init__.py  pokemon.py
backend/tests/: test_api.py
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/playwright/: homepage.spec.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Header.jsx  PokemonCard.jsx  PokemonDetail.jsx  PokemonList.jsx  SearchBar.jsx
frontend/src/pages/: AboutPage.jsx  HomePage.jsx  NotFoundPage.jsx  PokemonDetailPage.jsx
frontend/src/stores/: pokemonStore.js
frontend/src/styles/: PokemonCard.css  PokemonDetail.css  PokemonList.css
frontend/src/utils/: queries.js
frontend/tests/: pokemonStore.test.js
