[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project]
name = "pokemon-graphql-api"
version = "0.1.0"
description = "Pokemon GraphQL API with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
